Implement reading and creating of notes

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -5,7 +5,7 @@
 <div class="columns is-desktop">
   <div class="column"></div>
   <div class="column is-half-desktop">
-    <h2 class="is-size-3">Sign Up</h2>
+    <h2 class="is-size-3">Log In</h2>
 
     <form method="post" action="{{ url_for('log_in') }}">
       <div class="field">
